--- a/gamelorevault/src/main/resources/application.properties
+++ b/gamelorevault/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+igdb.api.url=https://api.igdb.com/v4
+igdb.api.client-id=b6w1hquuf1exhlo5arw29ubvol8ils
+igdb.api.key=7g7yonlt3pfsmuvc9n92v1trrtp05l
