--- a/gamelorevault/pom.xml
+++ b/gamelorevault/pom.xml
@@ -27,7 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>21</java.version>
+		<java.version>17</java.version>
 		<spring-boot.version>2.7.3</spring-boot.version>
 	</properties>
 	<dependencies>
@@ -124,11 +124,18 @@
 			<artifactId>spring-security-crypto</artifactId>
 		</dependency>
 
-		<!-- Jackson for JSON Processing -->
 		<dependency>
-		<groupId>com.fasterxml.jackson.core</groupId>
-		<artifactId>jackson-databind</artifactId>
+			<groupId>com.mashape.unirest</groupId>
+			<artifactId>unirest-java</artifactId>
+			<version>1.4.9</version>
 		</dependency>
+		<dependency>
+			<groupId>com.konghq</groupId>
+			<artifactId>unirest-java</artifactId>
+			<version>3.13.6</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
